--- a/respo/user-dev.properties
+++ b/respo/user-dev.properties
@@ -1,4 +1,4 @@
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8880/eureka/
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 hystrix.command.default.execution.timeout.enabled=false 
