--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
 
-foo = from foo2 props
+foo = from foo2 props 122
 democonfigclient.message=hello spring io
 server.port=8882
 # routes to serviceId
