--- a/shop/shop-stage.yml
+++ b/shop/shop-stage.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://test.sql.webapy.cn:3306/shop?useSSL=false
+    url: jdbc:mysql://sql.webapy.cn:3306/shop?useSSL=false
     username: pengxiang
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
