--- a/shop/shop-mgr-stage.yml
+++ b/shop/shop-mgr-stage.yml
@@ -21,5 +21,5 @@ px:
     eBusinessID: 1402984 #电商ID
     #百世快递
     HTKY:
-      customerName: 201175_0016
+      customerName: "201175_0016"
       customerPwd: VvVA8OBQQ6Pj
